# windrop

./: .gitignore  LICENSE  README.md  config.py  database.py  main.py  migrate.py  pyproject.toml
app/src/tests/: test_router.py
app/src/windrop/: error_codes.py  router.py  schemas.py  utils.py
backend/: pyproject.toml
backend/app/src/windrop/: router.py
backend/config/: app_config.json  config.py
backend/migrations/: 002_trusted_devices.sql
config/: app_config.json  config.py
database/: database.py  windrop.db
desktop/: pyproject.toml
migrations/: 001_initial.sql  001_otp.sql
